--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@ Resume
 </head>
 <body>
     <div class="container">
-<img src="Aubrey_Linkden_Pic.jpg" height="120px" alt="Aubrey_Linkden_Pic." class="homepg"> 
+<img src="assets/img/Aubrey_Linkden_Pic.jpg" height="120px" alt="Aubrey_Linkden_Pic." class="homepg"> 
 </div>
  <!-- Navigation-->
        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
